laborations/lab1/testsuite/good/synthetic018.cc
int main() {
	if (x1) x2; else x3;
	if (x1) { x2; } else x3;
	if (x1) x2; else { x3; }
	if (x1) { x2; } else { x3; }
}
