laborations/lab1/testsuite/bad/bad037.cc
int foo() {
	do do; while (foo);
}
